apps/templates/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
