apps/templates/ingress.yaml
#https://argo-cd.readthedocs.io/en/stable/operator-manual/ingress/#option-2-multiple-ingress-objects-and-hosts
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-http-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "global-cluster-issuer"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: http
    host: argocd.jonelli.uk
  tls:
  - hosts:
    - argocd.jonelli.uk
    secretName: argocd-cert-manager-ingress-http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-grpc-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
    host: grpc.argocd.example.com
  tls:
  - hosts:
    - grpc.argocd.example.com
    secretName: argocd-ingress-grpc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  annotations:
    cert-manager.io/cluster-issuer: "global-cluster-issuer"
  namespace: longhorn-system
spec:
  ingressClassName: nginx
  rules:
    - host: longhorn.jonelli.uk
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: longhorn-frontend
              port:
                number: 80
  tls:
    - hosts:
        - longhorn.jonelli.uk
      secretName: longhorn-ui-http-tls
  ingressClassName: nginx
